# androidzone

./: .gitignore  COPYING  README  README.md
boost-date-time/: AndroidManifest.xml
boost-date-time/jni/: Android.mk  main.cpp
boost-date-time/res/values/: strings.xml
boost-socket/: AndroidManifest.xml
boost-socket/jni/: Android.mk  async_tcp_server.h  main.cpp
boost-socket/res/values/: strings.xml
boost-thread/: AndroidManifest.xml
boost-thread/jni/: Android.mk  main.cpp
boost-thread/res/values/: strings.xml
boost-uuid/: AndroidManifest.xml
boost-uuid/jni/: Android.mk  main.cpp
boost-uuid/res/values/: strings.xml
cpplib/: CMakeLists.txt  cpplib.cpp  cpplib.h
flashlight/: AndroidManifest.xml
flashlight/res/layout/: activity_main.xml
flashlight/res/values/: strings.xml
flashlight/src/com/example/flashlight/: MainActivity.java
gles-engine/: AndroidManifest.xml
gles-engine/jni/: Android.mk  egl_engine.cpp  egl_engine.h  fps_calculator.cpp  fps_calculator.h  gles_engine.cpp  gles_engine.h  main.cpp  message_logger.cpp  message_logger.h
gles-engine/jni/utils/: macro.h
gles-engine/res/values/: strings.xml
libmodbus-tcp/: AndroidManifest.xml
libmodbus-tcp/jni/: Android.mk  main.cpp  modbus_logger.h  modbus_tcp_client.h  modbus_tcp_server.h
libmodbus-tcp/res/values/: strings.xml
std-streams/: AndroidManifest.xml
std-streams/jni/: Android.mk  main.cpp
std-streams/res/values/: strings.xml
vibrator/: AndroidManifest.xml
vibrator/res/layout/: activity_main.xml
vibrator/res/values/: strings.xml
(+8 files in other folders)
