SET(ANDROID_NDK $ENV{ANDROID_NDK})
SET(TOOLCHAIN_FILE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../cmake)

IF(NOT ANDROID_NDK)
    MESSAGE(FATAL_ERROR "ANDROID NDK NOT FOUND.")
ELSE()
    MESSAGE(STATUS "FOUND ANDROID NDK.")
    MESSAGE(STATUS "ANDROID NDK DIRECTORY : ${ANDROID_NDK}")
ENDIF(NOT ANDROID_NDK)

MESSAGE(STATUS "ANDROID NDK DIRECTORY : ${ANDROID_NDK}")

IF(NOT CMAKE_TOOLCHAIN_FILE)
    SET(CMAKE_TOOLCHAIN_FILE ${TOOLCHAIN_FILE_DIRECTORY}/android.toolchain.cmake)
ENDIF(NOT CMAKE_TOOLCHAIN_FILE)
IF(WIN32 AND NOT CMAKE_MAKE_PROGRAM)
    SET(CMAKE_MAKE_PROGRAM ${ANDROID_NDK}/prebuilt/windows/bin/make.exe)
ENDIF(WIN32 AND NOT CMAKE_MAKE_PROGRAM)

PROJECT(CPPLIB)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(cpp cpplib.h cpplib.cpp)